--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.3.4"
 requests = "^2.25.1"
 Flask = "^1.1.2"
 pandas = "^1.2.3"
+PyMySQL = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
