--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ requests = "^2.25.1"
 Flask = "^1.1.2"
 pandas = "^1.2.3"
 PyMySQL = "^1.0.2"
+boto3 = "^1.17.39"
 
 [tool.poetry.dev-dependencies]
 
