--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "ipfs-api": "^26.1.2",
     "react": "^17.0.2",
+    "react-csv-to-table": "^0.0.1",
     "react-dom": "^17.0.2",
+    "react-papaparse": "^3.12.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.4"
