--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "eth-revert-reason": "^1.0.3",
     "ipfs-api": "^26.1.2",
     "react": "^17.0.2",
     "react-csv-to-table": "^0.0.1",
     "react-dom": "^17.0.2",
+    "react-download-link": "^2.3.0",
     "react-papaparse": "^3.12.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
