--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-download-link": "^2.3.0",
     "react-papaparse": "^3.12.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.4"
