--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ pages:
     paths:
       - node_modules/
   script:
-    - npm install
     - npm run build
     - rm -rf public
     - cp build/index.html build/404.html
@@ -20,4 +19,4 @@ pages:
     paths:
       - public
   only:
-    - master
+    - TestPipeline
