--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,36 @@ image: node:latest
 before_script:
   - cd ./reactapp    # enter the React app directory
   - rm -rf build     # remove the existing build
-  - CI=false npm install     # install required packages
+  - CI=true npm install     # install required packages
 
-pages:
-  stage: deploy
-  cache:
-    paths:
-      - node_modules/
+cache:
+  paths:
+    - node_modules/
+
+stages:
+  - test
+
+test:
+  stage: test
   script:
-    - npm run build
-    - rm -rf public
-    - cp build/index.html build/404.html
-    - mv build public
-  artifacts:
-    paths:
-      - public
+    - CI=true npm test
   only:
     - TestPipeline
+
+
+# pages:
+#   stage: deploy
+#   cache:
+#     paths:
+#       - node_modules/
+#   script:
+#     - CI=false npm install
+#     - npm run build
+#     - rm -rf public
+#     - cp build/index.html build/404.html
+#     - mv build public
+#   artifacts:
+#     paths:
+#       - public
+#   only:
+#     - TestPipeline
