--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "eth-revert-reason": "^1.0.3",
+    "focus-trap-react": "^8.4.2",
     "ipfs-api": "^26.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
