--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "enzyme-adapter-react-16":"^16.4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
