--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.4",
-    "enzyme-adapter-react-16":"^16.4.0.0"
+    "enzyme-adapter-react-16":"^16.4.0.0",
+    "enzyme":"^6.14.10"
   },
   "scripts": {
     "start": "react-scripts start",
