--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "@wojtekmaj/enzyme-adapter-react-17":"^0.6.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "axios": "^0.21.1",
+    "enzyme": "^3.11.0",
     "eth-revert-reason": "^1.0.3",
     "ipfs-api": "^26.1.2",
     "react": "^17.0.2",
@@ -18,8 +20,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
-    "web3": "^1.3.4",
-    "enzyme":"^3.11.0"
+    "web3": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
