--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.4",
-    "node-gyp": "^8.0.0"
+    "node-gyp": "^8.0.0",
+    "windows-build-tools": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
