--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node:latest
 # image: nikolaik/python-nodejs:latest
 
 before_script:
+  - apt-get install python3.8
   - cd ./reactapp    # enter the React app directory
   - rm -rf build     # remove the existing build
   - CI=true npm install     # install required packages
