--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,10 @@ image: node:latest
 # image: nikolaik/python-nodejs:latest
 
 before_script:
-  - apt-get install python3.8
+  - sudo apt-get install software-properties-common
+  - sudo add-apt-repository ppa:deadsnakes/ppa
+  - sudo apt-get update
+  - sudo apt-get install python3.8
   - cd ./reactapp    # enter the React app directory
   - rm -rf build     # remove the existing build
   - CI=true npm install     # install required packages
