--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Anna Beer <aab120@ic.ac.uk>","Marwan Moussa <mm7515@ic.ac.uk>",
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pytest = "^6.2.3"
 numpy = "^1.20.1"
 torch = "^1.8.0"
 torchvision = "^0.9.0"
