--- a/reactapp/public/ClientPackage/pyproject.toml
+++ b/reactapp/public/ClientPackage/pyproject.toml
@@ -2,7 +2,7 @@
 name = "client-package"
 version = "0.1.0"
 description = ""
-authors = ["Anna Beer <aab120@ic.ac.uk>","Marwan Moussa <mm7515@ic.ac.uk>",
+authors = ["Anna Beer <aab120@ic.ac.uk>","Marwan Mousa <mm7515@ic.ac.uk>",
            "Patrica Daxbacher <pd720@ic.ac.uk>", "Roopa Antony <ra2820@ic.ac.uk>",
            "Thomas Falezan <tf317@ic.ac.uk>", "Zepeng Hu <zh2220@ic.ac.uk>"]
 
@@ -11,6 +11,7 @@ python = "^3.8"
 numpy = "^1.20.1"
 torch = "^1.8.0"
 flwr = "^0.15.0"
+pandas = "^1.2.4"
 
 [tool.poetry.dev-dependencies]
 
