--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "group-project"
 version = "0.1.0"
-description = "Dapp depeendencie"
+description = "Dapp dependencies"
 authors = ["Marwan Mousa <marwan.mousa15@imperial.ac.uk>"]
 
 [tool.poetry.dependencies]
